# Sync2Notion

./: Justfile  README.md  pyproject.toml  shell.nix
src/source2notion/: __init__.py  cli.py  config.py  github_client.py  notion_client.py  sync_service.py  utils.py
src/tests/: conftest.py  test_github_client.py  test_notion_client.py  test_sync_service.py
test_structure/b/1/: README.md
